pressa-tui/tests/snapshots/list_snapshots__frame_a_list_empty.snap
---
source: pressa-tui/tests/list_snapshots.rs
assertion_line: 164
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts ──────────────────────────────────────────────── 0 records ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  TITLE              STATUS             VIEWS            │"
"│                    │ ─────────────────────────────────────────────────────── │"
"│ > Posts            │                                                         │"
"│                    │   No records yet.  Press n to create the first one.     │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Edit   n New   Esc Back                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
