pressa-tui/tests/snapshots/list_snapshots__frame_c_after_two_move_downs.snap
---
source: pressa-tui/tests/list_snapshots.rs
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts ──────────────────────────────────────────────── 3 records ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  TITLE                     STATUS            VIEWS      │"
"│                    │ ─────────────────────────────────────────────────────── │"
"│ > Posts            │  Hello world               draft             0          │"
"│                    │  About page                published         42         │"
"│                    │ ▸Release notes             draft             —          │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Esc Back                                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
