pressa-tui/tests/snapshots/list_snapshots__frame_d_cell_rendering.snap
---
source: pressa-tui/tests/list_snapshots.rs
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Entries ────────────────────────────────────────────── 2 records ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  TITLE           FEATURED   PUBLISHED AT       METADATA │"
"│                    │ ─────────────────────────────────────────────────────── │"
"│ > Entries          │ ▸Release notes   ✓          2026-09-06 12:00   {3}      │"
"│                    │  Draft idea      ·          —                  —        │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Esc Back                                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
