pressa-tui/tests/snapshots/list_snapshots__frame_e_twenty_records_at_the_top.snap
---
source: pressa-tui/tests/list_snapshots.rs
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts ─────────────────────────────────────────────── 20 records ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  TITLE             STATUS                 VIEWS         │"
"│                    │ ─────────────────────────────────────────────────────── │"
"│ > Posts            │ ▸Post 01           draft                  1             │"
"│                    │  Post 02           published              2             │"
"│                    │  Post 03           draft                  3             │"
"│                    │  Post 04           published              4             │"
"│                    │  Post 05           draft                  5             │"
"│                    │  Post 06           published              6             │"
"│                    │  Post 07           draft                  7             │"
"│                    │  Post 08           published              8             │"
"│                    │  Post 09           draft                  9             │"
"│                    │  Post 10           published              10            │"
"│                    │  Post 11           draft                  11            │"
"│                    │  Post 12           published              12            │"
"│                    │  Post 13           draft                  13            │"
"│                    │  Post 14           published              14            │"
"│                    │ ↓ 6 more                                                │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Esc Back                                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
