pressa-tui/tests/snapshots/list_snapshots__frame_f_twenty_records_after_go_to_bottom.snap
---
source: pressa-tui/tests/list_snapshots.rs
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts ─────────────────────────────────────────────── 20 records ───┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  TITLE             STATUS                 VIEWS         │"
"│                    │ ─────────────────────────────────────────────────────── │"
"│ > Posts            │ ↑ 6 more                                                │"
"│                    │  Post 07           draft                  7             │"
"│                    │  Post 08           published              8             │"
"│                    │  Post 09           draft                  9             │"
"│                    │  Post 10           published              10            │"
"│                    │  Post 11           draft                  11            │"
"│                    │  Post 12           published              12            │"
"│                    │  Post 13           draft                  13            │"
"│                    │  Post 14           published              14            │"
"│                    │  Post 15           draft                  15            │"
"│                    │  Post 16           published              16            │"
"│                    │  Post 17           draft                  17            │"
"│                    │  Post 18           published              18            │"
"│                    │  Post 19           draft                  19            │"
"│                    │ ▸Post 20           published              20            │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Esc Back                                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
