pressa-tui/tests/snapshots/list_snapshots__frame_g_load_failed.snap
---
source: pressa-tui/tests/list_snapshots.rs
assertion_line: 221
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts ──────────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │  TITLE              STATUS             VIEWS            │"
"│                    │ ─────────────────────────────────────────────────────── │"
"│ > Posts            │                                                         │"
"│                    │   Could not load records.  Press r to retry.            │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│ ⚠ database error: disk I/O error                                             │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Edit   n New   Esc Back                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
