pressa-tui/tests/snapshots/list_snapshots__frame_h_at_the_minimum_size.snap
---
source: pressa-tui/tests/list_snapshots.rs
assertion_line: 227
expression: "draw(60, 16, &state).backend()"
---
"┌ pressa › Posts ──────────────────────────── 3 records ───┐"
"├────────────────────┬─────────────────────────────────────┤"
"│ Collections        │  TITLE           STATUS      VIEWS  │"
"│                    │ ─────────────────────────────────── │"
"│ > Posts            │ ▸Hello world     draft       0      │"
"│                    │  About page      published   42     │"
"│                    │  Release notes   draft       —      │"
"│                    │                                     │"
"│                    │                                     │"
"│                    │                                     │"
"│                    │                                     │"
"├────────────────────┴─────────────────────────────────────┤"
"│                                                          │"
"├──────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Edit   n New   Esc Back              │"
"└──────────────────────────────────────────────────────────┘"
