pressa-tui/tests/snapshots/list_snapshots__frame_i_more_columns_than_fit.snap
---
source: pressa-tui/tests/list_snapshots.rs
expression: "draw(60, 16, &state).backend()"
---
"┌ pressa › Entries ─────────────────────────── 1 record ───┐"
"├────────────────────┬─────────────────────────────────────┤"
"│ Collections        │  TITLE   STATUS  CONTE…  VIEWS   +3 │"
"│                    │ ─────────────────────────────────── │"
"│ > Entries          │ ▸Relea…  publi…  Every…  1024       │"
"│                    │                                     │"
"│                    │                                     │"
"│                    │                                     │"
"│                    │                                     │"
"│                    │                                     │"
"│                    │                                     │"
"├────────────────────┴─────────────────────────────────────┤"
"│                                                          │"
"├──────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Esc Back                                   │"
"└──────────────────────────────────────────────────────────┘"
